--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   },
   "homepage": "https://github.com/debo9210/cat-wiki-app#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "axios": "^0.21.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
