--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Cat encyclopedia. A devchallenges.io project solution...",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\"  \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +24,7 @@
   "homepage": "https://github.com/debo9210/cat-wiki-app#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
